--- a/logincss.css
+++ b/logincss.css
@@ -37,7 +37,7 @@ body{
 	padding: 10px 0;
 	font-size: 16px;
 	color: #fff;
-	margin-bottom: 20px;
+	margin-bottom: 25px;
 	border: none;
 	border-bottom: 1px solid #fff;
 	outline: none;
@@ -55,8 +55,8 @@ body{
 	transition: .5s;
 }
 
-.login-box .user-box input:focus-label,
-.login-box .user-box input:valid-label {
+.login-box .user-box input:focus + label,
+.login-box .user-box input:valid + label {
 	top: -85px;
 	left: 0;
 	color: #8F7CEC;
