--- a/forgetpasswordcss.css
+++ b/forgetpasswordcss.css
@@ -37,7 +37,7 @@ body{
 	padding: 10px 0;
 	font-size: 16px;
 	color: #fff;
-	margin-bottom: 25px;
+	margin-bottom: -10px;
 	border: none;
 	border-bottom: 1px solid #fff;
 	outline: none;
@@ -47,7 +47,7 @@ body{
 .login-box .user-box label{
 	position: relative;
 	left: 0;
-	top: -60px;
+	top: -25px;
 	padding: 10px 0;
 	font-size: 16px;
 	color: #fff;
@@ -57,13 +57,13 @@ body{
 
 .login-box .user-box input:focus + label,
 .login-box .user-box input:valid + labels{
-	top: -85px;
+	top: -50px;
 	left: 0;
 	color: #8F7CEC;
 	font-size: 12px;
 }
 
-#register{
+#otp{
 	padding: 10px 20px;
 	color: #CBBDDB;
 	font-size: 16px;
@@ -77,7 +77,7 @@ body{
 	text-align: center;
 }
 
-#register:hover{
+#otp:hover{
 	background: #8F7CEC;
 	color: #fff;
 	border-radius: 5px;
@@ -86,11 +86,12 @@ body{
 
 .button-form{
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	margin-top: 20px;
 }
 
-#logins{
+#back{
+	padding-top: 20px;
 	font-size: 14px;
 	text-decoration: none;
 	color: #CBBDDB;
@@ -99,7 +100,7 @@ body{
 	text-align: center;
 }
 
-#logins a{
+#back a{
 	margin: auto;
 	color: #8F7CEC;
 	text-decoration: none;
