--- a/homepagecss.css
+++ b/homepagecss.css
@@ -21,3 +21,8 @@ a {
 	background: #111111;
 	box-shadow: 12px 0 15px -4px rgba(143, 124, 236, 0.7);
 }
+@media all and (max-width: 480px){
+	.nav-text{
+		display: none;
+	}
+}
