--- a/testsidebar1css.css
+++ b/testsidebar1css.css
@@ -1,4 +1,3 @@
-/* Google Font Import - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 *{
     margin: 0;
@@ -306,4 +305,37 @@ body.dark .switch::before{
 }
 body.dark .home .text{
     color: var(--text-color);
+}
+
+.card {
+  height: 5rem;
+  width: 5rem;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+  border: none;
+}
+
+.home .card img {
+  height: 100%;
+  width: 100%;
+}
+
+.home .card:hover .details {
+  opacity: 1;
+  height: 100%;
+}
+
+.home .details {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  bottom: 0;
+  width: 100%;
+  height: 0%;
+  background: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: 0.5s ease;
 }
