Geser logo ke kiri
Hapus <p>&nbsp;&nbsp;</p> & format li

--- a/testsidebar1css.css
+++ b/testsidebar1css.css
@@ -98,6 +98,12 @@ body.dark{
 .sidebar.close .text{
     opacity: 0;
 }
+/* Geser logo ke kiri */
+.sidebar li{
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
+}
 /* =========================== */
 
 .sidebar header{
