--- a/testsidebar1css.css
+++ b/testsidebar1css.css
@@ -26,6 +26,8 @@ body{
     min-height: 100vh;
     background-color: var(--body-color);
     transition: var(--tran-05);
+    min-width: 100vh;
+    max-width: 100vh;
 }
 
 ::selection{
